Update to 0.3.0 (#21)
* Bump docker setup to 0.3.0M7

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Proxy support for sandbox fixed

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* upgraded Vaadin to 8.12.3

Signed-off-by: Bogdan Bondar <Bogdan.Bondar@bosch.io>

* How to report vulnerability

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Security chapter added and minor formatting issues fixed

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* adapted DEPENDENCIES list, changed vaadin themes CQ to 8.12.3

Signed-off-by: Bogdan Bondar <Bogdan.Bondar@bosch.io>

* Migration to JUnit5 as default test runtime (#1082)

* Migrate tests to JUnit5

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* REST docs tests migrated to JUnit5

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Migrated security and UI tests to JUnit5

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Migrated management tests to JUnit5

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Reflecting changes from JUnit5 migration

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Fix RabbitMQ test detection

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Drop support for JUnit4

Signed-off-by: Dominic Schabel <dominic.schabel@bosch.io>

* Fix the creation of the Usage Report (#1101)

* Use the forEachTenant method to generate the report for each tenant.
* add a test to verify the functionality of getSystemUsageStatisticsWithTenants

Signed-off-by: Michael Herdt <Michael.Herdt@bosch.io>

* Introduce new tenant configuration events (#1059)

* Introduce new events that are triggered when changes are made to the tenant configuration.
* Add new events to EventTypes
* Fix DeploymentManagement tests.
* Fix AmqpMessageDispatcherServiceIntegration tests.
* Fix DdiRootControlle test.
* Remove unused imports.
* TenantConfigUpdate